# trayasen

./: .eslintrc  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: AboutPage.tsx  App.tsx  AutoconnectPage.tsx  DeskElement.tsx  IntroPage.tsx  ManagePositionsPage.tsx  NewPositionPage.tsx  SetupPage.tsx  config_utils.rs  egui_utils.rs  local_idasen.rs  main.rs  main.tsx  rustUtils.ts  style.css  utils.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: broken_idasen.rs  config_utils.rs  desk_mutex.rs  local_idasen.rs  loose_idasen.rs  main.rs  tray_utils.rs
src/generic/: Button.tsx  Href.tsx  Input.tsx  Spinner.tsx  button.tsx  checkbox.tsx  input.tsx  label.tsx  tooltip.tsx
