[package]
name = "idasen-tray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
gtk = "0.15"
idasen = "0.2.0"
libappindicator = "0.7"
tokio = {version = "1.24.1", features = ["full"]}
tray-item = "0.7.1"
