[package]
name = "Trayasen"
version = "0.0.4"
description = "An app to control IKEA Idasen desk"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tauri = { version = "1.2.4", features = ["api-all", "system-tray"] }
idasen = "0.2.0"
btleplug = "0.10.4"
tokio = { version = "1.24.1", features = ["full"] }
indicatif = "0.16.2"
thiserror = "1.0.30"
tokio-stream = "0.1.8"
uuid = "1.3.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
